[gd_scene load_steps=3 format=3 uid="uid://dmwn2xu4nw7xn"]

[ext_resource type="Script" uid="uid://bquw68hqq8oun" path="res://scripts/word_bank.gd" id="1_efn6k"]
[ext_resource type="Theme" uid="uid://xf3txcnn1n8d" path="res://theming/theme.tres" id="1_kymqw"]

[node name="WordBank" type="PanelContainer"]
clip_contents = true
offset_right = 400.0
offset_bottom = 286.0
size_flags_horizontal = 3
theme = ExtResource("1_kymqw")
script = ExtResource("1_efn6k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FilterEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
clear_button_enabled = true

[node name="CapitalsCheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 3
text = "Capitals"

[node name="Countries" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CountriesTitle" type="Label" parent="VBoxContainer/Countries"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Unsolved Countries"

[node name="CountriesPanel" type="PanelContainer" parent="VBoxContainer/Countries"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Countries/CountriesPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
mouse_filter = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="CountriesFlow" type="FlowContainer" parent="VBoxContainer/Countries/CountriesPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Capitals" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="CapitalsTitle" type="Label" parent="VBoxContainer/Capitals"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Unsolved Capitals"

[node name="CapitalsPanel" type="PanelContainer" parent="VBoxContainer/Capitals"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Capitals/CapitalsPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
mouse_filter = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="CapitalsFlow" type="FlowContainer" parent="VBoxContainer/Capitals/CapitalsPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GrabberArea" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_default_cursor_shape = 14

[node name="Grabber" type="HSeparator" parent="VBoxContainer/GrabberArea"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -2.0
offset_right = 1.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_type_variation = &"WordBankGrabber"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/FilterEdit" to="." method="_on_filter_edit_text_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CapitalsCheckButton" to="." method="_on_capitals_toggled"]
[connection signal="gui_input" from="VBoxContainer/GrabberArea" to="." method="_on_grabber_gui_input"]
